    HAMA-19: Remove vector-norms enum to interface 
               from implementation (edwardyoon)
    HAMA-17: Vector to Writable conversion (edwardyoon)
    HAMA-15: Logo Alignment (edwardyoon) 
    HAMA-10: Refactor the mapred package 
               for the latest version of dependencies (edwardyoon)  
    HAMA-9: Upgrade dependencies (edwardyoon)

  BUG FIXES
  
    HAMA-345: Add execution time calculator to Pi job (edwardyoon)
    HAMA-344: Task successfully finished but system re-attempt (edwardyoon)
    HAMA-343: Fix Maven test fails (Tommaso Teofili via edwardyoon)
    HAMA-338: Username and Job-manager states are not collectly displayed (edwardyoon)
    HAMA-330: BSP program doesn't work when the desired tasks smaller than 
                       cluster size (edwardyoon)
    HAMA-326: GroomServer should wait until a job finishes (edwardyoon)
    HAMA-324: Removing javadoc warnings and useless libraries (edwardyoon)
    HAMA-322: Make sure failed assertions on test threads are reported
               (Filipe Manana via edwardyoon)  
    HAMA-316: Renaming and Refactoring methods in BSPPeerInterface (Filipe Manana)
    HAMA-319: groom servers Map in HeartbeatResponse not correctly serialized
                (Filipe Manana)
    HAMA-317: Remove HBASE_CONF_DIR and HBASE_HEAPSIZE properties (edwardyoon)
    HAMA-315: Uncomment code in checkLocalDirs() (edwardyoon)
    HAMA-314: Remove unnecessary methods from HamaConfiguration (edwardyoon)
    HAMA-307: BSPMaster - job ID counter is not read and updated atomically
                      (Filipe Manana via edward)
    HAMA-305: Redundant use of synchronize keyword (Filipe Manana via edward)
    HAMA-301: Fix unit test fail bug (edwardyoon)
    HAMA-303: slave.host.name is superceded by bsp.peer.hostname 
                (Filipe Manana via edwardyoon)
    HAMA-296: Fix warning about deprecated method (edwardyoon)
    HAMA-291: bsp.groom.port is unnused and superseeded 